--- a/browny-v1.0/index.html
+++ b/browny-v1.0/index.html
@@ -515,7 +515,7 @@
 										<img src="assets/images/portfolio/Peta Prioritas Penambahan RTH.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												ArcGIS
+												GIS
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -523,7 +523,7 @@
 										<img src="assets/images/portfolio/Peta Ambang Batas UHI 2023.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												ArcGIS
+												GIS
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -553,10 +553,40 @@
 										<img src="assets/images/portfolio/Perubahan Cungkeng_001.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												ArcGIS
+												GIS
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
+									<div class="item">
+										<img src="assets/images/portfolio/Buku Rencana RDTR.jpg" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="#">
+												Book Plan
+											</a>
+										</div><!-- /.isotope-overlay -->
+									</div><!-- /.item -->
+									<div class="item">
+										<img src="assets/images/portfolio/Buku Rencana RTRW.jpg" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="#">
+												Book Plan
+											</a>
+									</div><!-- /.isotope-overlay -->
+								</div><!-- /.item -->
+								<div class="item">
+									<img src="assets/images/portfolio/Poster RDTR.jpg" alt="portfolio image"/>
+									<div class="isotope-overlay">
+										<a href="#">
+											Poster
+										</a>
+								</div><!-- /.isotope-overlay -->
+							</div><!-- /.item -->
+							<div class="item">
+								<img src="assets/images/portfolio/Poster RTRW.jpg" alt="portfolio image"/>
+								<div class="isotope-overlay">
+									<a href="#">
+										Poster
+									</a>
 								</div><!-- /.col -->
 							</div><!-- /.row -->
 						</div><!--/.isotope-->
